cif/org.eclipse.escet.cif.tests/tests/checks/FuncNoSpecificStdLibCheckIgnoreAnnos.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ----------------------------------------------
  (1/1) Standard library function "fmt" is used.
  ----------------------------------------------
   * In constant "c":
     - const string c = fmt("%d", 123);
                        ^
